--- a/前端/css/style.css
+++ b/前端/css/style.css
@@ -1,25 +1,98 @@
-#container{width:1000px;}
-#header{background-color:#db4544; height:50px; width:1000px; float:top; text-align:center;}
-#menu {background-color:#101b2a; font-size:16px ;height:500px; width:150px; float:left; padding:0px; margin:0px;}
-#mainbody {background-color:#ffffff; height:500px; width:850px; float:left;}
-#footer {background-color:#99bbbb; clear:both; float:bottom; text-align:center;}
-#menu ul{width:150px; margin:0; list-style-type:none; padding:0px; background-color:#101b2a;}
-#menu ul li{width:150px;background-color:#000000;}
-#menu ul li a{display:block; color:#ffffff; text-align:left; text-decoration:none; padding:10px 0px 10px 30px; font-size:16px;}
-#menu ul li a:hover{color:#ffffff; text-align:left; text-decoration:none; padding:10px 0px 10px 30px; font-size:16px;}
-#menu ul li ul{list-style-type:none}
-#menu ul li ul li{width:150px;}
-#menu ul li ul li a{display:block; padding:6px 0px 6px 60px; text-align:left; text-decoration:none; font-size:16px;}
-#menu ul li ul li a:hover{padding:6px 0px 6px 60px; text-align:left; text-decoration:none; font-size:16px; color:Black; background-color:#a9201e;}
-h1 {margin-bottom:0;}
-h2 {margin-bottom:0; font-size:14px;}
-li {color:#ffffff}
-a  {color:#ffffff}
-html,body
-{
-width:100%;
-height:100%;
-margin:0px;
-padding:0px;
-border-style:none;
+#container {
+    width:1000px;
+}
+#header {
+    background-color: #db4544;
+    height: 50px;
+    width: 1000px;
+    float: top;
+    text-align: center;
+}
+#menu {
+    background-color: #101b2a;
+    font-size: 16px;
+    height: 500px;
+    width: 150px;
+    float: left;
+    padding: 0px;
+    margin: 0px;
+}
+#mainbody {
+    background-color: #ffffff;
+    height: 500px;
+    width: 850px;
+    float: left;
+}
+#footer {
+    background-color: #99bbbb;
+    clear: both;
+    float: bottom;
+    text-align: center;
+}
+#menu ul {
+    width: 150px;
+    margin: 0;
+    list-style-type: none;
+    padding: 0px;
+    background-color: #101b2a;
+}
+#menu ul li {
+    width: 150px;
+    background-color: #000000;
+}
+#menu ul li a {
+    display: block;
+    color: #ffffff;
+    text-align: left;
+    text-decoration: none;
+    padding: 10px 0px 10px 30px;
+    font-size: 16px;
+}
+#menu ul li a:hover {
+    color: #ffffff;
+    text-align: left;
+    text-decoration: none; 
+    padding: 10px 0px 10px 30px;
+    font-size: 16px;
+}
+#menu ul li ul {
+    list-style-type: none
+}
+#menu ul li ul li {
+    width: 150px;
+}
+#menu ul li ul li a {
+    display: block;
+    padding: 6px 0px 6px 60px;
+    text-align: left;
+    text-decoration: none;
+    font-size: 16px;
+}
+#menu ul li ul li a:hover {
+    padding: 6px 0px 6px 60px;
+    text-align: left;
+    text-decoration: none;
+    font-size: 16px;
+    color: black;
+    background-color: #a9201e;
+}
+h1 {
+    margin-bottom:0;
+}
+h2 {
+    margin-bottom:0;
+    font-size:14px;
+}
+li {
+    color: #ffffff;
+}
+a {
+    color: #ffffff;
+}
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    border-style: none;
 }
