--- a/前端/css/style.css
+++ b/前端/css/style.css
@@ -3,7 +3,7 @@
 }
 #header {
     background-color: #db4544;
-    height: 60px;
+    height: 80px;
     width: 100%;
     float: top;
     text-align: center;
@@ -12,15 +12,15 @@
     background-color: #101b2a;
     font-size: 16px;
     height: 100%;
-    width: 150px;
+    width: 170px;
     float: left;
     padding: 0px;
     margin: 0px;
 }
 #mainbody {
     background-color: #ffffff;
-    height: 500px;
-    width: 850px;
+    height: 100%;
+    width: 700px;
     float: left;
 }
 #footer {
@@ -76,6 +76,7 @@
     color: black;
     background-color: #a9201e;
 }
+
 h1 {
     margin-bottom:0;
 }
