--- a/前端/css/style.css
+++ b/前端/css/style.css
@@ -3,11 +3,42 @@
 }
 #header {
     background-color: #db4544;
-    height: 90px;
+    height: 54px;
     width: 100%;
     float: top;
     text-align: center;
 }
+
+#logo{
+	background-color:#a9201e;
+	width:50px;
+	height:50px;
+	padding:2px;
+	float:left;
+}
+
+#header  span{
+	display:block;
+}
+
+#title{
+	float:left;
+	color:#fff;
+	line-height:40px;
+	margin:7px;
+	font-size:25px;
+	font-family:Microsoft YaHei;
+}
+
+#name{
+	float:right;
+	color:#fff;
+	font-size:15px;
+	font-family:Microsoft YaHei;
+	line-height:30px;
+	margin:12px;
+}
+
 #menu {
     background-color: #101b2a;
     font-size: 16px;
@@ -39,6 +70,7 @@
 #menu ul li {
     width: 150px;
     background-color: #000000;
+	font-weight: bold;
 }
 #menu ul li a {
     display: block;
