--- a/前端/css/style.css
+++ b/前端/css/style.css
@@ -43,7 +43,7 @@
     background-color: #101b2a;
     font-size: 16px;
     height: 100%;
-    width: 170px;
+    width: 15%;
     float: left;
     padding: 0px;
     margin: 0px;
@@ -51,7 +51,7 @@
 #mainbody {
     background-color: #ffffff;
     height: 100%;
-    width: 700px;
+    width: 85%;
     float: left;
 }
 #footer {
@@ -61,14 +61,14 @@
     text-align: center;
 }
 #menu ul {
-    width: 150px;
+    width: 100%;
     margin: 0;
     list-style-type: none;
     padding: 0px;
     background-color: #101b2a;
 }
 #menu ul li {
-    width: 150px;
+    width: 100%;
     background-color: #000000;
 	font-weight: bold;
 }
@@ -91,7 +91,7 @@
     list-style-type: none
 }
 #menu ul li ul li {
-    width: 150px;
+    width: 100%;
 }
 #menu ul li ul li a {
     display: block;
