--- a/前端/css/province.css
+++ b/前端/css/province.css
@@ -1,5 +1,9 @@
 *{
 	margin:0;
+	padding:0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 #header {
@@ -11,8 +15,8 @@
 
 #logo{
 	background-color:#a9201e;
-	width:50px;
-	height:50px;
+	width:54px;
+	height:54px;
 	padding:2px;
 	float:left;
 }
@@ -45,18 +49,6 @@
     height:600px;
     width:170px;
     float:left;
-}
-
-#menu_header{
-	width:20px;
-	height:40px;
-	float:left;
-	margin:0 75px;
-}
-
-#menu_header img{
-	height:20px;
-	margin:10px 0;
 }
 
 #menu_container{
@@ -139,20 +131,20 @@ a {
 }
 
 .submenu {
- 	display: none;
+ 	display:none;
  	background: #0f1a2a;
  	font-size: 14px;
  }
 
  .submenu li {
  	border-bottom: 1px solid #4b4a5e;
+	height:40px;
  }
 
  .submenu a {
- 	display: block;
+ 	display:block;
  	text-decoration: none;
  	color: #fff;
- 	padding: 12px;
  	padding-left: 42px;
  	-webkit-transition: all 0.25s ease;
  	-o-transition: all 0.25s ease;
@@ -162,4 +154,8 @@ a {
  .submenu a:hover {
  	background: #dd4544;
  	color: #FFF;
+ }
+ 
+ #mainbody{
+	 float:left;
  }
