添加mainbody的css，以及企业用户的完善信息和数据上报

--- a/前端/css/style.css
+++ b/前端/css/style.css
@@ -65,6 +65,14 @@
     width:170px;
     float:left;
 }
+#mainbody {
+	position:absolute;
+	left:170px;
+	right:0px;
+	top:54px;
+	bottom:0px;
+	float:left;
+}
 
 #menu_container{
 	width:170px;
