--- a/前端/css/province.css
+++ b/前端/css/province.css
@@ -66,6 +66,15 @@
     float:left;
 }
 
+#mainbody {
+	position:absolute;
+	left:170px;
+	right:0px;
+	top:54px;
+	bottom:0px;
+	float:left;
+}
+
 #menu_container{
 	width:170px;
 	float:left;
