--- a/前端/css/PublishNotice.css
+++ b/前端/css/PublishNotice.css
@@ -33,6 +33,83 @@ div[data-role="editor-toolbar"] {
   user-select: none;
 }
 
+.container{
+	width:100%;
+	margin:15px;
+	background-color:#fff;
+}
+
+.head{
+	width:100%;
+	height:20px;
+	margin:10px 0;
+	float:left;
+	font-family:Microsoft YaHei;
+	font-size:16px;
+	line-height:20px;
+}
+
+.head div{
+	width:2px;
+	height:20px;
+	margin-right:10px;
+	background-color:#db4544;
+	float:left;
+}
+
+.head span{
+	display:block;
+	float:left;
+}
+
+.title{
+	width:100%;
+	height:40px;
+	padding:10px 0;
+	background-color:#f6f6f6;
+	float:left;
+	margin:15px 0 10px;
+	line-height:40px;
+}
+
+.title span{
+	font-family:Microsoft YaHei;
+	font-size:18px;
+	margin:0 20px;
+}
+
+.title input{
+	width:300px;
+	height:30px;
+}
+
+.hero-unit{
+	padding:0;
+	margin:10px 0;
+	background-color:#fff;
+	float:left;
+}
+
+.i-footer{
+	width:100%;
+	height:30px;
+	padding:10px 0;
+	margin-top:10px;
+	float:left;
+}
+
+.i-footer input{
+	width:80px;
+	height:30px;
+	margin-right:30px;
+	background-color:#db4544;
+	color:#fff;
+	font-family:Microsoft YaHei;
+	border:solid 1px #db4544;
+	cursor:pointer;
+	border-radius:3px;
+}
+
 .dropdown-menu a {
   cursor: pointer;
 }
