--- a/前端/css/notice.css
+++ b/前端/css/notice.css
@@ -5,6 +5,7 @@
 .container{
 	width:100%;
 	margin:15px;
+	font-family:Microsoft YaHei;
 	background-color:#fff;
 }
 
@@ -33,18 +34,58 @@
 
 .type{
 	width:100%;
-	height:50px;
+	height:60px;
 	margin-top:10px;
 	float:left;
 	background-color:#f6f6f6;
 }
 
+.type span{
+	display:block;
+	float:left;
+	line-height:30px;
+	text-align:center;
+	margin:15px;
+	color:#666666;
+	margin-left:20px;
+	font-size:18px;
+}
+
+.type a{
+	text-decoration:none;
+	text-align:center;
+	line-height:35px;
+	color:#666666;
+}
+
+.typea{
+	width:80px;
+	height:35px;
+	margin:13px 20px;
+	float:left;
+	background-color:#e9e9e9;
+	display:block;
+	
+} 
+
 .title{
 	width:100%;
-	height:30px;
+	height:40px;
 	margin-top:10px;
 	float:left;
 	background-color:#f6f6f6;
+}
+
+.title span, .cstyle span{
+	display:block;
+	float:left;
+	line-height:20px;
+	margin-top:10px;
+	margin-left:20px;
+	color:#666666;
+	font-size:16px;
+	height:20px;
+	width:80px;
 }
 
 .content{
@@ -52,6 +93,14 @@
 	margin-top:10px;
 	float:left;
 	background-color:#fff;
+	border-top:solid 1px #e9e9e9;
+}
+
+.cstyle{
+	width:100%;
+	height:40px;
+	padding:10px 0;
+	border-bottom:solid 1px #e9e9e9;
 }
 
 .i-foot{
@@ -63,7 +112,7 @@
 }
 
 .i-foot input{
-		width:80px;
+	width:80px;
 	height:30px;
 	margin-right:30px;
 	background-color:#db4544;
