--- a/前端/css/Detail.css
+++ b/前端/css/Detail.css
@@ -2,15 +2,24 @@
 	background-color:#f6f6f6;
 	width:100%;
 }
+
+.container{
+	width:97%;
+	margin:15px;
+	font-family:Microsoft YaHei;
+	background-color:#fff;
+}
+
 .head{
 	width:100%;
 	height:20px;
 	margin:10px 0;
 	float:left;
 	font-family:Microsoft YaHei;
-	font-size:20px;
+	font-size:16px;
 	line-height:20px;
 }
+
 .head div{
 	width:2px;
 	height:20px;
@@ -18,6 +27,7 @@
 	background-color:#db4544;
 	float:left;
 }
+
 .head span{
 	display:block;
 	float:left;
