--- a/前端/css/Detail.css
+++ b/前端/css/Detail.css
@@ -3,9 +3,10 @@
 	width:100%;
 }
 
-.container{
+#container{
 	width:97%;
-	margin:15px;
+	margin:5px;
+	margin-left:15px;
 	font-family:Microsoft YaHei;
 	background-color:#fff;
 }
@@ -32,3 +33,77 @@
 	display:block;
 	float:left;
 }
+
+.tform{
+	margin-left:20px;
+	width:100%;
+	margin-top:10px;
+	margin-bottom:10px;
+	float:left;
+	font-family:Microsoft YaHei;
+	font-size:16px;
+	color:#666666;
+}
+
+table, tr, td, th{
+	border:0 solid #fff;
+}
+
+.tform table{
+	width:800px;
+	height:420px;
+	float:left;
+}
+
+#area, #organization, #name, #nature1, #nature2, #industry1, #industry2, #work, #linker, #address, #code, #email{
+	width:300px;
+	height:31px;
+	margin-top:6px;
+}
+
+#nature1, #nature2, #industry1, #industry2{
+	width:200px;
+}
+
+.i-footer{
+	width:100%;
+	height:30px;
+	float:left;
+	margin-left:20px;
+}
+
+.i-footer input{
+	width:100px;
+	height:30px;
+	margin-right:30px;
+	background-color:#db4544;
+	color:#fff;
+	font-family:Microsoft YaHei;
+	border:solid 1px #db4544;
+	cursor:pointer;
+	border-radius:3px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
