--- a/前端/css/Survey.css
+++ b/前端/css/Survey.css
@@ -2,10 +2,10 @@
 	background-color:#f6f6f6;
 	width:100%;
 }
-
-.container{
+#container{
 	width:97%;
-	margin:15px;
+	margin:5px;
+	margin-left:15px;
 	font-family:Microsoft YaHei;
 	background-color:#fff;
 }
@@ -32,3 +32,65 @@
 	display:block;
 	float:left;
 }
+
+.sform{
+	margin-left:20px;
+	width:100%;
+	margin-top:10px;
+	margin-bottom:10px;
+	float:left;
+	font-family:Microsoft YaHei;
+	font-size:16px;
+	color:#666666;
+}
+
+table, tr, td, th{
+	border:0 solid #fff;
+}
+
+.sform table{
+	width:800px;
+	height:420px;
+	float:left;
+}
+
+#start, #now, #reason, #type, #reason1, #reason2, #reason3, #explain1, #explain2, #explain3{
+	width:400px;
+	height:31px;
+	margin-top:6px;
+}
+
+.i-footer{
+	width:100%;
+	height:30px;
+	float:left;
+	margin-left:20px;
+}
+
+.i-footer input{
+	width:100px;
+	height:30px;
+	margin-right:30px;
+	background-color:#db4544;
+	color:#fff;
+	font-family:Microsoft YaHei;
+	border:solid 1px #db4544;
+	cursor:pointer;
+	border-radius:3px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
