关于比较分析的修改以及系统监测的完善

--- a/前端/css/SystemMonitoring.css
+++ b/前端/css/SystemMonitoring.css
@@ -37,12 +37,16 @@
 	cursor:pointer;
 }
 
-#picture{
+#CPUUsing{
 	float: left;
 }
 
-#table{
-	float: right;
+#HardDiskUsing{
+	float: left;
+}
+
+#MemoryUsing{
+	float: left;
 }
 
 #mytable{
