--- a/前端/sub/css/login.css
+++ b/前端/sub/css/login.css
@@ -4,7 +4,7 @@
 
 #login{
 	height:450px;
-	width:350px;
+	width:390px;
 	margin:150px auto 0;
 }
 
@@ -20,7 +20,7 @@
 
 .li{
 	width:100px;
-	margin:0 35px;
+	margin:0 15px;
 	line-height:20px;
 	list-style:none;
 	float:left;
@@ -28,17 +28,20 @@
 }
 
 .li a{
-	float:left;
+	display:block;
+	margin:0 auto;
+	text-align:center;
 	font-family:微软雅黑, heitisc;
 	text-decoration:none;
 	padding-bottom:4px;
-	color:#494848
+	color:#fff;
 }
 
 
 
 #login-container{
-	margin:0 10px;
+	width:390px;
+	height:300px;
 	float:left;
 }
 
@@ -47,7 +50,7 @@ table, tr, th, td{
 }
 
 #login-container table{
-	width:300px;
+	width:390px;
 	height:250px;
 	margin-top:30px;
 }
@@ -58,6 +61,8 @@ table, tr, th, td{
 }
 
 #login-container td{
+	width:390px;
+	margin:0 auto;
 	height:50px;
 	font-size:14px;
 	text-align:left;
@@ -66,7 +71,7 @@ table, tr, th, td{
 }
 
 #login-container th input{
-	width:310px;
+	width:350px;
 	height:35px;
 	font-size:18px;
 }
@@ -76,7 +81,8 @@ th input:focus{
 }
 
 #login-container td input{
-	width:310px;
+	margin:0 20px;
+	width:350px;
 	height:45px;
 	font-size:20px;
 	font-family:微软雅黑 heitisc;
