完善企业信息最终版1.0
1.整合前端CSS
2.完善表单验证

--- a/前端/css/Detail.css
+++ b/前端/css/Detail.css
@@ -50,13 +50,13 @@ table, tr, td, th{
 }
 
 .tform table{
-	width:800px;
+	width:1100px;
 	height:420px;
 	float:left;
 }
 
-#area, #organization, #name, #nature1, #nature2, #industry1, #industry2, #work, #linker, #address, #code, #email{
-	width:300px;
+#area, #organization, #name, #nature1, #nature2, #nature3, #industry1, #industry2, #work, #linker, #address, #code, #Fax, #PhoneNumber, #email{
+	width:250px;
 	height:31px;
 	margin-top:6px;
 }
